added Popper JS and jQuery

--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <!-- To ensure proper rendering and touch zooming on a mobile device. Pre sets initial zoom -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Testing Bootstrap</title>
+
+    <!-- Latest compiled and minified CSS -->
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+
+    <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+    <!-- My custom stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -109,7 +121,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio minima
             dignissimos magnam nam beatae cum, exercitationem ipsam non
             blanditiis distinctio nesciunt quas molestias assumenda optio, at
-            mollitia consectetur atque rerum. 
+            mollitia consectetur atque rerum.
           </div>
         </div>
       </div>
