--- a/Week 4/lec53/index.html
+++ b/Week 4/lec53/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    
   </head>
   <body>
     <h1 id="title">Lecture 53</h1>
@@ -11,5 +12,9 @@
       <input id="name" type="text" />
       <button>Say it!</button>
     </p>
+
+    <div id="content"></div>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
