--- a/Coursera/lec54/index.html
+++ b/Coursera/lec54/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script src="js/script.js"></script>
   </head>
   <body>
     <h1 id="title">Lecture 53</h1>
@@ -9,12 +10,12 @@
     <p>
       Say hello to
       <input type="text" id="name" />
-      <button onclick="sayHello();">
+      <button>
         Say it!
       </button>
     </p>
 
     <div id="content"></div>
-    <script src="js/script.js"></script>
+    
   </body>
 </html>
