basic html structure

--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Luka" />
+    <meta name="university" content="Faculty of Information Studies" />
+
     <title>WebDev Library</title>
 
     <!-- Styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>The Web Dev Library</h1>
+    </header>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+    <main>
+      <h2>Welcome</h2>
+    </main>
+    <footer></footer>
+  </body>
 </html>
