--- a/index.html
+++ b/index.html
@@ -26,7 +26,68 @@
     </nav>
     <main>
       <h2>Welcome</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae placeat
+        velit error officiis aut. Facilis eius hic expedita sapiente saepe
+        eligendi inventore beatae error nisi atque? Labore cupiditate asperiores
+        earum sapiente dicta iure vero necessitatibus dolorum autem, dolores
+        sunt in veniam? Atque doloremque sapiente voluptatum dicta autem
+        repudiandae aliquam in possimus, magni qui explicabo perspiciatis harum
+        ducimus, debitis blanditiis? Iste adipisci velit facilis modi, nisi
+        repellat unde minus dolore ex autem sequi quasi commodi itaque ipsam
+        totam esse perspiciatis consequuntur quam consequatur vero saepe libero
+        voluptatem fugit eaque. Dolorem harum explicabo libero quae fugiat
+        quisquam ipsam eveniet ea magni. Tenetur pariatur saepe, adipisci
+        placeat vitae, amet exercitationem optio in impedit expedita labore
+        suscipit sapiente, fugit unde veritatis error sequi incidunt blanditiis!
+        Molestias quo quas laudantium iste quasi explicabo, rerum repellat
+        praesentium quis totam omnis sit nesciunt ratione sint aliquid, eaque
+        cupiditate dignissimos consequatur, possimus exercitationem ipsam
+        ducimus optio reprehenderit. Ex molestiae, quae, ad voluptas facere illo
+        nesciunt alias aperiam impedit suscipit ut earum modi. Quidem
+        reprehenderit earum vero. Praesentium fugiat officia eveniet similique
+        porro tempora, ratione velit sapiente unde pariatur temporibus iure
+        ipsam et asperiores recusandae atque. Soluta ad praesentium expedita
+        enim eaque iure officia alias velit at impedit reiciendis, eveniet vitae
+        atque ex doloremque ipsam laudantium inventore amet obcaecati deleniti
+        beatae harum nemo voluptatibus. Tempore laudantium soluta libero
+        corporis, deserunt, enim sint ab, quis ratione nam commodi. Eum eaque
+        veniam necessitatibus earum placeat temporibus, doloremque doloribus
+        quis eius quibusdam dolor architecto exercitationem magni quidem nobis.
+        Harum illum voluptatum ullam nesciunt reiciendis tenetur sed vitae
+        architecto ad atque incidunt dignissimos itaque non quam adipisci
+        quaerat alias fuga expedita quod recusandae, dolorem nulla? Error magni
+        nulla veniam facere a repellendus provident officia laborum amet
+        mollitia, illo quibusdam commodi odio, consequatur quae natus modi qui
+        aut dolorum reiciendis eligendi porro dicta! Cumque aliquam odit, fuga
+        deserunt illum totam eos. Consectetur temporibus sunt sit illo velit
+        quae laudantium, voluptate iste iusto voluptates cupiditate, ipsa
+        similique? Quisquam a illo et, voluptatum veniam dignissimos corrupti!
+        Repellendus animi possimus vero molestiae hic, veniam a nihil laboriosam
+        obcaecati at quasi ratione ad, blanditiis adipisci. Consectetur velit ex
+        animi numquam libero harum assumenda, nam recusandae doloribus,
+        temporibus eligendi error dolor facilis! Tenetur, eligendi corrupti
+        saepe quisquam doloremque voluptas ratione aperiam id provident
+        aspernatur aliquid ad architecto omnis totam veritatis deserunt libero
+        maxime? Ad totam odit optio temporibus quidem, deleniti tempore dolorum,
+        doloribus obcaecati accusamus fugit suscipit. Consequuntur velit esse
+        fugiat dolorum. Voluptatem, inventore ratione. Quisquam beatae
+        cupiditate ab esse saepe eveniet fugit facilis sunt doloremque molestiae
+        velit quia corporis, incidunt ut fuga blanditiis. Mollitia laudantium
+        aliquam sapiente pariatur libero, saepe veritatis enim omnis dolores.
+        Ratione, veritatis expedita facilis nihil, ullam autem libero eum
+        tempora quasi sed fugiat culpa rerum saepe quae quam illo reiciendis eos
+        rem placeat atque! Ducimus optio adipisci laboriosam alias excepturi,
+        repudiandae, quos hic expedita temporibus voluptas nesciunt possimus
+        laudantium, assumenda tempora. Est modi nam optio eligendi illum dolores
+        in facilis inventore. Tenetur sunt, fuga nihil voluptates reprehenderit
+        deserunt error exercitationem sint quae eius tempora.
+      </p>
     </main>
-    <footer></footer>
+    <footer>
+      <div></div>
+      <div></div>
+      <div></div>
+    </footer>
   </body>
 </html>
