--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
     <title>WebDev Library</title>
 
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Anton|Roboto+Mono|Spartan&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- Styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
