main content div box initiated

--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
       </ul>
     </nav>
     <main>
+      <div class="content">
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et non
+          expedita, nostrum quam eligendi, sequi ratione ipsa suscipit
+          voluptates ex possimus mollitia accusantium architecto hic eaque magni
+          aperiam neque saepe. Molestias sunt aperiam vero enim fugit sequi quam
+          placeat voluptatibus voluptatum id obcaecati consequatur culpa
+          explicabo, magni molestiae nisi, nesciunt dolorem qui necessitatibus
+          officia quae facere neque a non? Fugiat fuga velit pariatur omnis,
+          nihil sapiente ratione nisi accusantium deserunt porro provident.
+          Voluptatem molestiae sapiente quibusdam. Laborum incidunt distinctio,
+          repellat id deleniti fugit ut aperiam, quae iste accusamus vitae
+          placeat iure nisi quas inventore necessitatibus non labore! Non,
+          magnam illo!
+        </p>
+      </div>
       <h2>Page Content</h2>
 
       <ol>
