added empty content pages

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
     </header>
     <nav>
       <ul>
-        <li>Home</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Contact</li>
+        <li><a href="#"></a>Home</li>
+        <li><a href="#"></a>HTML</li>
+        <li><a href="#"></a>CSS</li>
+        <li><a href="#"></a>JS</li>
+        <li><a href="#"></a>Back-End</li>
+        <li><a href="#"></a>Tools</li>
       </ul>
     </nav>
     <main>
