temp removed other html, left side page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
 
     <!-- Styles -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <header>
@@ -23,12 +23,12 @@
     </header>
     <nav>
       <ul>
-        <li><a href="#"></a>Home</li>
-        <li><a href="#"></a>HTML</li>
-        <li><a href="#"></a>CSS</li>
-        <li><a href="#"></a>JS</li>
-        <li><a href="#"></a>Back-End</li>
-        <li><a href="#"></a>Tools</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="/html/html-lec.html">HTML</a></li>
+        <li><a href="#">CSS</a></li>
+        <li><a href="#">JS</a></li>
+        <li><a href="#">Back-End</a></li>
+        <li><a href="#">Tools</a></li>
       </ul>
     </nav>
     <main>
