--- a/html/html-lec.html
+++ b/html/html-lec.html
@@ -15,7 +15,7 @@
     />
 
     <!-- Styles -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="../h" href="../css/styles.css" />
   </head>
   <body></body>
 </html>
