h2 as a main page heading

--- a/index.html
+++ b/index.html
@@ -32,59 +32,43 @@
       </ul>
     </nav>
     <main>
-      <div class="content">
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et non
-          expedita, nostrum quam eligendi, sequi ratione ipsa suscipit
-          voluptates ex possimus mollitia accusantium architecto hic eaque magni
-          aperiam neque saepe. Molestias sunt aperiam vero enim fugit sequi quam
-          placeat voluptatibus voluptatum id obcaecati consequatur culpa
-          explicabo, magni molestiae nisi, nesciunt dolorem qui necessitatibus
-          officia quae facere neque a non? Fugiat fuga velit pariatur omnis,
-          nihil sapiente ratione nisi accusantium deserunt porro provident.
-          Voluptatem molestiae sapiente quibusdam. Laborum incidunt distinctio,
-          repellat id deleniti fugit ut aperiam, quae iste accusamus vitae
-          placeat iure nisi quas inventore necessitatibus non labore! Non,
-          magnam illo!
-        </p>
-      </div>
       <h2>Page Content</h2>
-
       <ol>
         <li>First Part</li>
         <li>Second Part</li>
         <li>Third Part</li>
       </ol>
+      <div class="content">
+        <h3>First Part</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+          dolor iusto aliquam, eveniet necessitatibus dicta ratione a obcaecati
+          unde nesciunt voluptates quasi eaque tenetur totam distinctio! Et
+          voluptas possimus atque a. Fugit enim porro facere itaque incidunt,
+          delectus voluptatum eligendi, optio, culpa aliquam quisquam et fuga
+          nihil omnis fugiat natus.
+        </p>
 
-      <h3>First Part</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dolor
-        iusto aliquam, eveniet necessitatibus dicta ratione a obcaecati unde
-        nesciunt voluptates quasi eaque tenetur totam distinctio! Et voluptas
-        possimus atque a. Fugit enim porro facere itaque incidunt, delectus
-        voluptatum eligendi, optio, culpa aliquam quisquam et fuga nihil omnis
-        fugiat natus.
-      </p>
+        <h3>Second Part</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ipsam
+          exercitationem dolorum voluptate facilis assumenda, id maiores dolore
+          neque modi nihil vitae? Labore debitis, beatae necessitatibus
+          obcaecati dicta cumque nemo rem quae fugit, ullam enim nihil suscipit
+          perspiciatis facilis magnam quas odio hic, et doloribus aut maxime
+          provident ipsum! Voluptatibus.
+        </p>
 
-      <h3>Second Part</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ipsam
-        exercitationem dolorum voluptate facilis assumenda, id maiores dolore
-        neque modi nihil vitae? Labore debitis, beatae necessitatibus obcaecati
-        dicta cumque nemo rem quae fugit, ullam enim nihil suscipit perspiciatis
-        facilis magnam quas odio hic, et doloribus aut maxime provident ipsum!
-        Voluptatibus.
-      </p>
-
-      <h3>Third Part</h3>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae aut
-        labore blanditiis dolore voluptate eaque accusantium commodi veritatis
-        ipsam? Aliquam ad numquam excepturi beatae itaque eveniet magni nobis et
-        voluptatibus voluptate architecto quisquam, accusantium eligendi velit
-        deleniti voluptas autem! Tempore consequuntur sint asperiores illum
-        necessitatibus in pariatur deleniti ipsum quam?
-      </p>
+        <h3>Third Part</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae aut
+          labore blanditiis dolore voluptate eaque accusantium commodi veritatis
+          ipsam? Aliquam ad numquam excepturi beatae itaque eveniet magni nobis
+          et voluptatibus voluptate architecto quisquam, accusantium eligendi
+          velit deleniti voluptas autem! Tempore consequuntur sint asperiores
+          illum necessitatibus in pariatur deleniti ipsum quam?
+        </p>
+      </div>
     </main>
     <footer></footer>
   </body>
