adjusting navigation menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Fonts -->
     <link
-      href="https://fonts.googleapis.com/css?family=Anton|Roboto+Mono|Spartan&display=swap"
+      href="https://fonts.googleapis.com/css?family=Anton|Roboto+Mono|Spartan:400,700&display=swap"
       rel="stylesheet"
     />
 
@@ -24,7 +24,7 @@
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="/html/html-lec.html">HTML</a></li>
+        <li><a href="#">HTML</a></li>
         <li><a href="#">CSS</a></li>
         <li><a href="#">JS</a></li>
         <li><a href="#">Back-End</a></li>
