--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/temptstyle.css" />
   </head>
   <body>
     <header>
