--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="/css/styles.css" />
+
+    <!-- Script -->
+    <script src="./script/script.js" defer></script>
   </head>
   <body>
     <header>
