--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
     </nav>
     <main>
       <h2>Page Content</h2>
-      <ol>
-        <li>First Part</li>
-        <li>Second Part</li>
-        <li>Third Part</li>
-      </ol>
+      <div class="pagenav">
+        <ol>
+          <li>First Part</li>
+          <li>Second Part</li>
+          <li>Third Part</li>
+        </ol>
+      </div>
+
       <div class="content">
         <h3>First Part</h3>
         <p>
