Rearranged menu with flex

--- a/index.html
+++ b/index.html
@@ -25,14 +25,21 @@
       <h1>The Web Dev Library</h1>
     </header>
     <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">HTML</a></li>
-        <li><a href="#">CSS</a></li>
-        <li><a href="#">JS</a></li>
-        <li><a href="#">Back-End</a></li>
-        <li><a href="#">Tools</a></li>
-      </ul>
+      <div>
+        <a href="#">Home</a>
+      </div>
+      <div>
+        <a href="#">HTML</a>
+      </div>
+      <div>
+        <a href="#">CSS</a>
+      </div>
+      <div>
+        <a href="#">JS</a>
+      </div>
+      <div>
+        <a href="#">Contact</a>
+      </div>
     </nav>
     <main>
       <h2>Page Content</h2>
