--- a/html/index.html
+++ b/html/index.html
@@ -15,10 +15,10 @@
     />
 
     <!-- Styles -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
 
     <!-- Script -->
-    <script src="./script/script.js" defer></script>
+    <script src="../script/script.js" defer></script>
   </head>
   <body>
     <header>
