Initialized second page

--- a/html/htmlpage.html
+++ b/html/htmlpage.html
@@ -29,7 +29,7 @@
         <a href="#">Home</a>
       </div>
       <div>
-        <a href="htmlpage.html">HTML</a>
+        <a href="#">HTML</a>
       </div>
       <div>
         <a href="#">CSS</a>
@@ -42,7 +42,7 @@
       </div>
     </nav>
     <main>
-      <h2>Page Content</h2>
+      <h2>HTML Lectures</h2>
       <div class="pagenav">
         <ol>
           <li>First Part</li>
