removed links for other pages

--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
         <a href="#">Home</a>
       </div>
       <div>
-        <a href="htmlpage.html">HTML</a>
+        <a href="#">HTML</a>
       </div>
       <div>
         <a href="#">CSS</a>
