--- a/html/index.html
+++ b/html/index.html
@@ -44,6 +44,7 @@
     <main>
       <h2>Page Content</h2>
       <div class="pagenav">
+        <h4>Contents:</h4>
         <ol>
           <li>First Part</li>
           <li>Second Part</li>
