placeholder image added

--- a/html/index.html
+++ b/html/index.html
@@ -82,6 +82,13 @@
           velit deleniti voluptas autem! Tempore consequuntur sint asperiores
           illum necessitatibus in pariatur deleniti ipsum quam?
         </p>
+
+        <!-- Added a placeholder image. Check what that a's for -->
+        <a href="https://placeholder.com">
+          <img
+            src="https://via.placeholder.com/400x300"
+            alt="A placeholder image"
+        /></a>
       </div>
     </main>
     <footer></footer>
